--- a/public/blogs/index.html
+++ b/public/blogs/index.html
@@ -106,6 +106,23 @@
                     </section>
                     
                     <section>
+                        <a href="/blogs/gapminder/" class="image">
+							<img src="/img/blogs/pic07.jpg" alt="" data-position="center center" />
+						</a>
+                        <div class="content">
+                            <div class="inner">
+                                <header class="major">
+                                    <h3>Gapminder data</h3>
+                                </header>
+                                <p>How has human life changed over time?</p>
+                                <ul class="actions">
+                                    <li><a href="/blogs/gapminder/" class="button">Learn more</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </section>
+                    
+                    <section>
                         <a href="/blogs/project1/" class="image">
 							<img src="/img/blogs/pic07.jpg" alt="" data-position="center center" />
 						</a>
@@ -114,7 +131,7 @@
                                 <header class="major">
                                     <h3>Movies</h3>
                                 </header>
-                                <p>Movies</p>
+                                <p>We take a look at the movies dataset and see how the film industry has changed over time.</p>
                                 <ul class="actions">
                                     <li><a href="/blogs/project1/" class="button">Learn more</a></li>
                                 </ul>
