--- a/public/index.html
+++ b/public/index.html
@@ -113,8 +113,8 @@
                 <img src="img/pic03.jpg" alt="" />
             </span>
             <header class="major">
-                <h3><a href="/blogs/magna" class="link">Magna</a></h3>
-                <p>Lorem Etiam Nullam</p>
+                <h3><a href="/blogs/gapminder" class="link">Gapminder data</a></h3>
+                <p>How has human lifestyle changed over the years?</p>
             </header>
         </article>
         
