--- a/public/blogs/index.html
+++ b/public/blogs/index.html
@@ -73,7 +73,7 @@
                     <div class="inner">
 			
                         <span class="image">
-                            <img src="/img/pic02.jpg" alt="" />
+                            <img src="/img/blogs_banner.jpg" alt="" />
                         </span>
 			
                         <header class="major">
