--- a/public/index.html
+++ b/public/index.html
@@ -120,11 +120,11 @@
         
         <article>
             <span class="image">
-                <img src="img/pic04.jpg" alt="" />
+                <img src="img/covid.jpg" alt="" />
             </span>
             <header class="major">
-                <h3><a href="/blogs/ipsum" class="link">Ipsum</a></h3>
-                <p>Nisl Sed Aliquam</p>
+                <h3><a href="/blogs/covid" class="link">India Covid data</a></h3>
+                <p>How did India end up being 2nd worst hit by Covid?</p>
             </header>
         </article>
         
