--- a/public/blogs/index.html
+++ b/public/blogs/index.html
@@ -123,6 +123,23 @@
                     </section>
                     
                     <section>
+                        <a href="/blogs/ibm/" class="image">
+							<img src="/img/blogs/pic03.jpg" alt="" data-position="center center" />
+						</a>
+                        <div class="content">
+                            <div class="inner">
+                                <header class="major">
+                                    <h3>IBM HR analytics</h3>
+                                </header>
+                                <p>IBM employee data analytics</p>
+                                <ul class="actions">
+                                    <li><a href="/blogs/ibm/" class="button">Learn more</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </section>
+                    
+                    <section>
                         <a href="/blogs/covid/" class="image">
 							<img src="/img/blogs/covid.jpg" alt="" data-position="center center" />
 						</a>
