--- a/public/index.html
+++ b/public/index.html
@@ -93,8 +93,8 @@
                 <img src="img/pic01.jpg" alt="" />
             </span>
             <header class="major">
-                <h3><a href="/blogs/blog5" class="link">NYT masks</a></h3>
-                <p>New york mask usage</p>
+                <h3><a href="/blogs/ibm" class="link">IBM HR analytics</a></h3>
+                <p>IBM employee trend and attrition data</p>
             </header>
         </article>
         
