--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
         
         <article>
             <span class="image">
-                <img src="img/pic03.jpg" alt="" />
+                <img src="img/pic03.png" alt="" />
             </span>
             <header class="major">
                 <h3><a href="/blogs/gapminder" class="link">Gapminder data</a></h3>
