--- a/content/blogs/ibm.html
+++ b/content/blogs/ibm.html
@@ -22,92 +22,7 @@ categories:
 <div id="load-data" class="section level2">
 <h2>Load data</h2>
 <p>First let us load the data</p>
-<pre class="r"><code>hr_dataset &lt;- read_csv(&quot;C:/Users/Ishita Gupta/Desktop/Applied statistics with R/applied-statistics/session2-workshop1/data/datasets_1067_1925_WA_Fn-UseC_-HR-Employee-Attrition.csv&quot;)
-glimpse(hr_dataset)</code></pre>
-<pre><code>## Rows: 1,470
-## Columns: 35
-## $ Age                      &lt;dbl&gt; 41, 49, 37, 33, 27, 32, 59, 30, 38, 36, 35...
-## $ Attrition                &lt;chr&gt; &quot;Yes&quot;, &quot;No&quot;, &quot;Yes&quot;, &quot;No&quot;, &quot;No&quot;, &quot;No&quot;, &quot;No&quot;...
-## $ BusinessTravel           &lt;chr&gt; &quot;Travel_Rarely&quot;, &quot;Travel_Frequently&quot;, &quot;Tra...
-## $ DailyRate                &lt;dbl&gt; 1102, 279, 1373, 1392, 591, 1005, 1324, 13...
-## $ Department               &lt;chr&gt; &quot;Sales&quot;, &quot;Research &amp; Development&quot;, &quot;Resear...
-## $ DistanceFromHome         &lt;dbl&gt; 1, 8, 2, 3, 2, 2, 3, 24, 23, 27, 16, 15, 2...
-## $ Education                &lt;dbl&gt; 2, 1, 2, 4, 1, 2, 3, 1, 3, 3, 3, 2, 1, 2, ...
-## $ EducationField           &lt;chr&gt; &quot;Life Sciences&quot;, &quot;Life Sciences&quot;, &quot;Other&quot;,...
-## $ EmployeeCount            &lt;dbl&gt; 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...
-## $ EmployeeNumber           &lt;dbl&gt; 1, 2, 4, 5, 7, 8, 10, 11, 12, 13, 14, 15, ...
-## $ EnvironmentSatisfaction  &lt;dbl&gt; 2, 3, 4, 4, 1, 4, 3, 4, 4, 3, 1, 4, 1, 2, ...
-## $ Gender                   &lt;chr&gt; &quot;Female&quot;, &quot;Male&quot;, &quot;Male&quot;, &quot;Female&quot;, &quot;Male&quot;...
-## $ HourlyRate               &lt;dbl&gt; 94, 61, 92, 56, 40, 79, 81, 67, 44, 94, 84...
-## $ JobInvolvement           &lt;dbl&gt; 3, 2, 2, 3, 3, 3, 4, 3, 2, 3, 4, 2, 3, 3, ...
-## $ JobLevel                 &lt;dbl&gt; 2, 2, 1, 1, 1, 1, 1, 1, 3, 2, 1, 2, 1, 1, ...
-## $ JobRole                  &lt;chr&gt; &quot;Sales Executive&quot;, &quot;Research Scientist&quot;, &quot;...
-## $ JobSatisfaction          &lt;dbl&gt; 4, 2, 3, 3, 2, 4, 1, 3, 3, 3, 2, 3, 3, 4, ...
-## $ MaritalStatus            &lt;chr&gt; &quot;Single&quot;, &quot;Married&quot;, &quot;Single&quot;, &quot;Married&quot;, ...
-## $ MonthlyIncome            &lt;dbl&gt; 5993, 5130, 2090, 2909, 3468, 3068, 2670, ...
-## $ MonthlyRate              &lt;dbl&gt; 19479, 24907, 2396, 23159, 16632, 11864, 9...
-## $ NumCompaniesWorked       &lt;dbl&gt; 8, 1, 6, 1, 9, 0, 4, 1, 0, 6, 0, 0, 1, 0, ...
-## $ Over18                   &lt;chr&gt; &quot;Y&quot;, &quot;Y&quot;, &quot;Y&quot;, &quot;Y&quot;, &quot;Y&quot;, &quot;Y&quot;, &quot;Y&quot;, &quot;Y&quot;, &quot;Y...
-## $ OverTime                 &lt;chr&gt; &quot;Yes&quot;, &quot;No&quot;, &quot;Yes&quot;, &quot;Yes&quot;, &quot;No&quot;, &quot;No&quot;, &quot;Ye...
-## $ PercentSalaryHike        &lt;dbl&gt; 11, 23, 15, 11, 12, 13, 20, 22, 21, 13, 13...
-## $ PerformanceRating        &lt;dbl&gt; 3, 4, 3, 3, 3, 3, 4, 4, 4, 3, 3, 3, 3, 3, ...
-## $ RelationshipSatisfaction &lt;dbl&gt; 1, 4, 2, 3, 4, 3, 1, 2, 2, 2, 3, 4, 4, 3, ...
-## $ StandardHours            &lt;dbl&gt; 80, 80, 80, 80, 80, 80, 80, 80, 80, 80, 80...
-## $ StockOptionLevel         &lt;dbl&gt; 0, 1, 0, 0, 1, 0, 3, 1, 0, 2, 1, 0, 1, 1, ...
-## $ TotalWorkingYears        &lt;dbl&gt; 8, 10, 7, 8, 6, 8, 12, 1, 10, 17, 6, 10, 5...
-## $ TrainingTimesLastYear    &lt;dbl&gt; 0, 3, 3, 3, 3, 2, 3, 2, 2, 3, 5, 3, 1, 2, ...
-## $ WorkLifeBalance          &lt;dbl&gt; 1, 3, 3, 3, 3, 2, 2, 3, 3, 2, 3, 3, 2, 3, ...
-## $ YearsAtCompany           &lt;dbl&gt; 6, 10, 0, 8, 2, 7, 1, 1, 9, 7, 5, 9, 5, 2,...
-## $ YearsInCurrentRole       &lt;dbl&gt; 4, 7, 0, 7, 2, 7, 0, 0, 7, 7, 4, 5, 2, 2, ...
-## $ YearsSinceLastPromotion  &lt;dbl&gt; 0, 1, 0, 3, 2, 3, 0, 0, 1, 7, 0, 0, 4, 1, ...
-## $ YearsWithCurrManager     &lt;dbl&gt; 5, 7, 0, 0, 2, 6, 0, 0, 8, 7, 3, 8, 3, 2, ...</code></pre>
-</div>
-<div id="data-cleaning-and-wrangling" class="section level2">
-<h2>Data Cleaning and wrangling</h2>
-<p>We are going to clean the data set, as variable names are in capital letters, some variables are not really necessary, and some variables, e.g., <code>education</code> are given as a number rather than a more useful description</p>
-<pre class="r"><code>hr_cleaned &lt;- hr_dataset %&gt;% 
-  clean_names() %&gt;% 
-  mutate(
-    education = case_when(
-      education == 1 ~ &quot;Below College&quot;,
-      education == 2 ~ &quot;College&quot;,
-      education == 3 ~ &quot;Bachelor&quot;,
-      education == 4 ~ &quot;Master&quot;,
-      education == 5 ~ &quot;Doctor&quot;
-    ),
-    environment_satisfaction = case_when(
-      environment_satisfaction == 1 ~ &quot;Low&quot;,
-      environment_satisfaction == 2 ~ &quot;Medium&quot;,
-      environment_satisfaction == 3 ~ &quot;High&quot;,
-      environment_satisfaction == 4 ~ &quot;Very High&quot;
-    ),
-    job_satisfaction = case_when(
-      job_satisfaction == 1 ~ &quot;Low&quot;,
-      job_satisfaction == 2 ~ &quot;Medium&quot;,
-      job_satisfaction == 3 ~ &quot;High&quot;,
-      job_satisfaction == 4 ~ &quot;Very High&quot;
-    ),
-    performance_rating = case_when(
-      performance_rating == 1 ~ &quot;Low&quot;,
-      performance_rating == 2 ~ &quot;Good&quot;,
-      performance_rating == 3 ~ &quot;Excellent&quot;,
-      performance_rating == 4 ~ &quot;Outstanding&quot;
-    ),
-    work_life_balance = case_when(
-      work_life_balance == 1 ~ &quot;Bad&quot;,
-      work_life_balance == 2 ~ &quot;Good&quot;,
-      work_life_balance == 3 ~ &quot;Better&quot;,
-      work_life_balance == 4 ~ &quot;Best&quot;
-    )
-  ) %&gt;% 
-  select(age, attrition, daily_rate, department,
-         distance_from_home, education,
-         gender, job_role,environment_satisfaction,
-         job_satisfaction, marital_status,
-         monthly_income, num_companies_worked, percent_salary_hike,
-         performance_rating, total_working_years,
-         work_life_balance, years_at_company,
-         years_since_last_promotion)</code></pre>
+<pre class="r"><code>hr_dataset &lt;- read_csv(&quot;C:/Users/Ishita Gupta/Desktop/Applied statistics with R/applied-statistics/session2-workshop1/data/datasets_1067_1925_WA_Fn-UseC_-HR-Employee-Attrition.csv&quot;)</code></pre>
 </div>
 <div id="analysis" class="section level2">
 <h2>Analysis</h2>
@@ -1011,7 +926,6 @@ plot(income_job_role)</code></pre>
 <div id="income-age-and-roles" class="section level3">
 <h3>Income, age and roles</h3>
 <p>As a final analysis, we will proceed to plot the distribution of income by age in the different roles</p>
-<pre><code>## NULL</code></pre>
 <p><img src="/blogs/ibm_files/figure-html/income_age_fjob_level-1.png" width="648" style="display: block; margin: auto;" /></p>
 <p>We gather that “Managers” and “Research directors” roles are generally taken up by experienced candidates and thus they are right skewed and have higher monthly incomes. The Sales executive roles usually have a lower age and a higher income which is why we have a higher monthly income average for the Sales department. Human Resources and Sales Executives roles are generally the ones with the lowest incomes.</p>
 </div>
